--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
-  persistent_bottom_nav_bar_v2: ^5.2.3
+  go_router: ^14.1.4
+  water_drop_nav_bar:
 
 dev_dependencies:
   flutter_test:
