--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
   go_router: ^14.1.4
-  water_drop_nav_bar:
+  water_drop_nav_bar: ^1.0.0
+  flutter_svg: ^2.0.10+1
+  curved_navigation_bar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   assets:
     - assets/logo/
     - assets/home_page/carousel_slider/
+    - assets/home_page/bottom_nav_bar/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
