--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   water_drop_nav_bar: ^1.0.0
   flutter_svg: ^2.0.10+1
   curved_navigation_bar: ^1.0.5
+  animated_splash_screen: ^1.3.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,7 @@ flutter:
     - assets/logo/
     - assets/home_page/carousel_slider/
     - assets/home_page/bottom_nav_bar/
+    - assets/lottie/splash_screen.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
